--- a/qdrant-landing/themes/qdrant/static/css/main.scss
+++ b/qdrant-landing/themes/qdrant/static/css/main.scss
@@ -104,4 +104,5 @@
 @import "blocks/blog";
 @import "blocks/article-card";
 @import "blocks/breadcrumbs";
+@import "blocks/share-post";
 @import "blocks/footer";
