--- a/qdrant-landing/themes/qdrant/layouts/partials/blogpost_footer.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/blogpost_footer.html
@@ -1,13 +1,8 @@
-{{ $link := .Permalink }}
-{{ if .Params.external_link }}
-{{ $link = .Params.external_link }}
-{{ end }}
-
 <div class="clearfix">
     <div class="pull-left">
         <ul class="post-meta">
 
-            {{ partial "author" . }}
+            <li>{{ partial "author" . }}</li>
 
             {{ if .Params.Categories }}
             <li>Category:
@@ -26,21 +21,10 @@
         </ul>
         <ul class="post-meta">
             <li><span class="fa fa-calendar mr-2"></span>{{ .Date | time.Format ":date_long" }}
-            </li>
+            </li>|&nbsp;&nbsp;
             <li>
                 <!-- Post Share Options -->
-                <div class="post-share-options">
-                    <ul class="social-box">
-                        <span class="share">Share this post:</span>
-                        <li><a href="https://www.facebook.com/sharer/sharer.php?u={{ $link }}"><span
-                                class="fab fa-facebook-f"></span></a></li>
-                        <li>
-                            <a href="https://twitter.com/intent/tweet?url={{ $link }}&text={{ .Title }}"><span
-                                    class="fab fa-twitter"></span></a></li>
-                        <li><a href="https://www.linkedin.com/sharing/share-offsite/?url={{ $link }}"><span
-                                class="fab fa-linkedin"></span></a></li>
-                    </ul>
-                </div>
+                {{ partial "share-post" . }}
 
             </li>
         </ul>
