--- a/qdrant-landing/themes/qdrant/static/css/blocks/_article.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/_article.scss
@@ -43,7 +43,7 @@ article aside[role="status"]:before {
   font-weight: 900;
 }
 
-@mixin content-reset{
+@mixin content-reset {
 
   table {
     @extend .table;
@@ -164,16 +164,19 @@ article aside[role="status"]:before {
   }
 
   figcaption {
+    margin-top: 10px;
     font-size: 22px;
     font-style: italic;
     line-height: 34px;
   }
 
   &__info {
+    display: flex;
+    align-items: center;
     margin-bottom: 24px;
     color: var(--brand-dark-gray);
     font-family: $font-family-non-content;
-    font-size: 14px;
+    font-size: 1rem;
     font-weight: 400;
     font-style: normal;
     line-height: 17px;
@@ -206,7 +209,7 @@ article aside[role="status"]:before {
   margin-bottom: 14px;
   color: var(--brand-secondary);
 
-  & > h1, & > h2, &> h3 {
+  & > h1, & > h2, & > h3 {
     margin-bottom: 0;
     font-size: 40px;
     line-height: 48px;
