--- a/qdrant-landing/themes/qdrant/layouts/articles/single.html
+++ b/qdrant-landing/themes/qdrant/layouts/articles/single.html
@@ -5,7 +5,7 @@
         <section class="col-lg-12 col-md-12 col-sm-12">
             {{ .Scratch.Set "scope" "single" }}
             <article class="article article_bb mb-4">
-                <div class="article__cover mt-5 mb-4">
+                <div class="article__cover mt-lg-5 mb-4">
                     <img src="{{ .Params.preview_image }}">
                 </div>
                 {{ partial "breadcrumbs" . }}
@@ -13,7 +13,12 @@
                 {{ .Content }}
             </article>
             <div class="pt-3">{{ partial "author" . }}</div>
-            <div class="article__info mt-4">{{ .Date | time.Format ":date_long" }}&nbsp;&nbsp;|&nbsp;&nbsp;{{ partial "share-post" . }}</div>
+            <div class="article__info mt-4">
+                <span class="d-inline-block mb-2 mb-md-0">
+                    {{ .Date | time.Format ":date_long" }}&nbsp;&nbsp;|&nbsp;&nbsp;
+                </span>
+                {{ partial "share-post" . }}
+            </div>
         </section>
     </div>
 </div>
