--- a/qdrant-landing/themes/qdrant/layouts/partials/article-card.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/article-card.html
@@ -3,15 +3,15 @@
 {{ $link = .context.Params.external_link }}
 {{ end }}
 
-<div class="col-lg-4 col-md-6 col-sm-12">
+<div class="d-flex col-lg-4 col-md-6 col-sm-12">
     <div class="article-card{{if .classes}} {{ .classes }}{{end}}">
         <a class="article-card__image" href="{{ $link }}" target="_blank"><img src="{{ .context.Params.preview_image }}" loading="lazy" alt=""/></a>
         <div class="article-card__content">
             <h5 class="article-card__title"><a href="{{ $link }}">{{ .context.Title }}</a></h5>
             <div class="article-card__text">{{ .context.Params.description }}
             </div>
-            <a href="{{ $link }}" target="_blank" class="theme-btn btn-style-five"><span
-                    class="txt">Learn More</span></a>
         </div>
+        <a href="{{ $link }}" target="_blank" class="theme-btn btn-style-five article-card__btn"><span
+                class="txt">Learn More</span></a>
     </div>
 </div>
