--- a/qdrant-landing/themes/qdrant/static/css/main.scss
+++ b/qdrant-landing/themes/qdrant/static/css/main.scss
@@ -38,6 +38,7 @@
 34. Contact Form
 
 **********************************************/
+@use "helpers/functions";
 @import "../../../../node_modules/bootstrap/scss/bootstrap.scss";
 
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800|Roboto:400,700,700i&display=swap');
