--- a/qdrant-landing/themes/qdrant/static/css/blocks/_page-title.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/_page-title.scss
@@ -12,7 +12,7 @@
   overflow: hidden;
 
   @include media-breakpoint-up(lg) {
-    padding: 139px 0 50px;
+    padding: 139px 0 0;
   }
 
   &__title {
