changed colors on old pages to the new design schema

--- a/qdrant-landing/themes/qdrant/layouts/solutions/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/solutions/list.html
@@ -14,7 +14,7 @@
 
             {{ if .Params.short_description  }}
 
-            <div class="col-lg-4 col-md-6 col-sm-12">
+            <div class="d-flex col-lg-4 col-md-6 col-sm-12">
                 <!-- News block Two -->
                 <div class="news-block-two">
                     <div class="inner-box">
