--- a/qdrant-landing/themes/qdrant/static/css/blocks/_forms.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/_forms.scss
@@ -42,14 +42,14 @@
 .login-page-section .form-column h3{
   position:relative;
   font-weight:700;
-  color:#2b2b2b;
+  color: var(--brand-secondary);
   line-height:1.3em;
 }
 
 .login-page-section .form-column .welcome{
   position:relative;
   font-weight:400;
-  color:#5a5a5a;
+  color: var(--brand-secondary);
   font-size:16px;
   line-height:1.3em;
   margin-top:12px;
@@ -69,7 +69,7 @@
 
 .styled-form .form-group label{
   position:relative;
-  color:#5a5a5a;
+  color: var(--brand-secondary);
   font-size:16px;
   margin-bottom:15px;
 }
@@ -132,7 +132,7 @@
 
 .styled-form .form-group .check-box label{
   font-family: $font-family-non-content;
-  color:#2b2b2b;
+  color: var(--brand-secondary);
 }
 
 .styled-form .form-group .check-box label{
@@ -146,7 +146,7 @@
   background: #ffffff;
   font-size: 15px;
   font-weight: 400;
-  color: #211347;
+  color: var(--brand-secondary);
   cursor: pointer;
   margin-bottom: 0;
   /* -webkit-transition: all 300ms ease; */
@@ -229,7 +229,7 @@
 
 .styled-form .form-group .radio-box label{
   font-family: $font-family-non-content;
-  color:#2b2b2b;
+  color: var(--brand-secondary);
 }
 
 .styled-form .form-group .radio-box label{
@@ -243,7 +243,7 @@
   background: #ffffff;
   font-size: 15px;
   font-weight: 400;
-  color: #211347;
+  color: var(--brand-secondary);
   cursor: pointer;
   margin-bottom: 0;
   /* -webkit-transition: all 300ms ease; */
@@ -346,7 +346,7 @@
 
 .contact-form .form-group label{
   position:relative;
-  color:#5a5a5a;
+  color: var(--brand-secondary);
   font-size:16px;
   margin-bottom:15px;
 }
@@ -358,8 +358,7 @@
   width:100%;
   color:var(--brand-secondary);
   border-radius:50px;
-  border:1px solid #f2f2f2;
-  /* transition:all 500ms ease; */
+  border: 1px solid var(--brand-dark-gray);  /* transition:all 500ms ease; */
   /* -moz-transition:all 500ms ease; */
   /* -webkit-transition:all 500ms ease; */
   /* -ms-transition:all 500ms ease; */
